--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,11 @@
 /* Write your custom CSS here */
+body { 
+    padding-right: 0 !important 
+}
+img {
+    display: block;
+    max-width:475px;
+    max-height:475px;
+    width: auto;
+    height: auto;
+  }
