--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,4 +8,9 @@ img {
     max-height:475px;
     width: auto;
     height: auto;
-  }
+}
+#thismonthReportChart {
+    width: calc(100% + 51px);
+    height: 100px;
+    margin: 20px -26px -27px -25px;
+}
