--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,7 @@ img {
     max-height:475px;
     width: auto;
     height: auto;
+    object-fit: contain;
 }
 #thisMonthReportChart {
     width: calc(100% + 51px);
