--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -40,11 +40,11 @@ body {
 }
 
 a {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 a:hover {
-    color: #38a67c;
+    color: #673fa8;
 }
 
 p {
@@ -565,7 +565,7 @@ h6 {
 /* Backgrounds */
 
 .bg-primary {
-    background-color: #5fd0a5!important;
+    background-color: #8661C1!important;
 }
 
 .bg-secondary {
@@ -573,7 +573,7 @@ h6 {
 }
 
 .bg-success {
-    background-color: #5fd0a5!important;
+    background-color: #8661C1!important;
 }
 
 .bg-danger {
@@ -608,7 +608,7 @@ h6 {
 }
 
 .text-success {
-    color: #5fd0a5!important;
+    color: #8661C1!important;
 }
 
 .text-danger {
@@ -676,7 +676,7 @@ h6 {
 }
 
 .logo-box a.logo-text {
-    color: #5fd0a5;
+    color: #8661C1;
     text-transform: capitalize;
     font-weight: bold;
     font-size: 22px;
@@ -712,7 +712,7 @@ h6 {
 
 .logo-box a#sidebar-state:hover,
 .logo-box a#sidebar-close:hover {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 @media (max-width: 1199px) {
@@ -745,7 +745,7 @@ h6 {
 }
 
 .logo-box a:hover {
-    color: #38a67c;
+    color: #673fa8;
 }
 
 .accordion-menu {
@@ -803,17 +803,17 @@ h6 {
 }
 
 .accordion-menu li.open > a {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .accordion-menu > li > a:hover,
 .accordion-menu > li.active-page > a {
-    color: #5fd0a5;
+    color: #8661C1;
     background: rgba(0,0,0,.01);
 }
 
 .accordion-menu li.active-page > a:only-child {
-    background: linear-gradient(90deg, rgba(85,195,183,1) 0%, rgba(95,208,165,1) 48%, rgba(102,218,144,1) 100%);
+    background: #8661C1;
     color: #fff;
 }
 
@@ -979,7 +979,7 @@ h6 {
     
     .compact-sidebar .accordion-menu ul li a:hover,
     .compact-sidebar .accordion-menu ul li a.active {
-        color: #5fd0a5;
+        color: #8661C1;
     }
 }
 
@@ -1061,7 +1061,7 @@ h6 {
 
 .page-header .navbar-search #nav-search:focus {
     outline: 0;
-    border-color: #5fd0a5;
+    border-color: #8661C1;
     background: #fff;
     box-shadow: 0 0 1.25rem rgba(31,45,61,.08);
 }
@@ -1159,7 +1159,7 @@ h6 {
 }
 
 .dropdown-menu a.dropdown-item:hover {
-    color: #5fd0a5;
+    color: #8661C1;
     background: transparent;
 }
 
@@ -1297,7 +1297,7 @@ h6 {
 
 .btn.btn-primary {
     color: #fff;
-    background: linear-gradient(90deg, rgba(85,195,183,1) 0%, rgba(95,208,165,1) 48%, rgba(102,218,144,1) 100%);
+    background: #8661C1;
 }
 
 .btn-primary:before {
@@ -1308,7 +1308,7 @@ h6 {
     right: 0;
     bottom: 0;
     left: 0;
-    background: linear-gradient(90deg, rgba(71,176,165,1) 0%, rgba(77,189,146,1) 48%, rgba(83,198,125,1) 100%);
+    background: #8661C1;
     z-index: -1;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -1526,8 +1526,8 @@ h6 {
 }
 
 .btn.btn-outline-primary {
-    border: 1px solid #5fd0a5;
-    color: #5fd0a5;
+    border: 1px solid #8661C1;
+    color: #8661C1;
 }
 
 .btn-outline-primary,
@@ -1549,7 +1549,7 @@ h6 {
     right: 0;
     bottom: 0;
     left: 0;
-    background: linear-gradient(90deg, rgba(71,176,165,1) 0%, rgba(77,189,146,1) 48%, rgba(83,198,125,1) 100%);
+    background: #8661C1;
     z-index: -1;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -1720,7 +1720,7 @@ h6 {
 }
 
 .card .card-title a.card-title-helper:hover {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .card .card-title .card-title-helper i {
@@ -1881,7 +1881,7 @@ h6 {
 .list-group-item.active {
     color: #fff;
     font-weight: bold;
-    background: linear-gradient(90deg, rgba(85,195,183,1) 0%, rgba(95,208,165,1) 48%, rgba(102,218,144,1) 100%);
+    background: #8661C1;
     border-color: #DDF0F1;
 }
 
@@ -2077,7 +2077,7 @@ body.modal-open {
 }
 
 .pagination li a:hover {
-    color: #5fd0a5;
+    color: #8661C1;
     background: #fafafa;
     border-color: #e8e8e8;
 }
@@ -2088,9 +2088,9 @@ body.modal-open {
 
 
 .pagination li.active a {
-    background: linear-gradient(90deg, rgba(85,195,183,1) 0%, rgba(95,208,165,1) 48%, rgba(102,218,144,1) 100%);
+    background: #8661C1;
     color: #fff!important;
-    border-color: #5fd0a5!important;
+    border-color: #8661C1!important;
 }
 
 .pagination-circle .page-link {
@@ -2125,7 +2125,7 @@ body.modal-open {
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-    background: #5fd0a5;
+    background: #8661C1;
  }
 
 /* Popovers */
@@ -2167,7 +2167,7 @@ body.modal-open {
 }
 
 .progress .progress-bar {
-    background: #5FD0A5;
+    background: #8661C1;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
 }
@@ -2294,18 +2294,18 @@ textarea.form-control {
 }
 
 .form-control:focus {
-    border-color: rgba(95, 208, 165, 0.6);
-    box-shadow: 0 0 0 0.2rem rgba(95, 208, 165, 0.25);
+    border-color: #8661C1;
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .custom-control-input:checked~.custom-control-label::before {
     color: #fff;
-    border-color: #5fd0a5;
-    background-color: #5fd0a5;
+    border-color: #8661C1;
+    background-color: #8661C1;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 0 0 0.2rem rgba(95, 208, 165, 0.25);
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -2353,7 +2353,7 @@ textarea.form-control {
 }
   
 .custom-range::-webkit-slider-thumb {
-    background-color: #5fd0a5;
+    background-color: #8661C1;
 }
   
 .custom-range::-webkit-slider-thumb:active {
@@ -2361,7 +2361,7 @@ textarea.form-control {
 }
   
 .custom-range::-moz-range-thumb {
-    background-color: #5fd0a5;
+    background-color: #8661C1;
 }
   
 .custom-range::-moz-range-thumb:active {
@@ -2369,7 +2369,7 @@ textarea.form-control {
 }
   
 .custom-range::-ms-thumb {
-    background-color: #5fd0a5;
+    background-color: #8661C1;
 }
   
 .custom-range::-ms-thumb:active {
@@ -2400,7 +2400,7 @@ textarea.form-control {
 }
 
 .valid-feedback {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .form-control.is-invalid,
@@ -2411,7 +2411,7 @@ textarea.form-control {
 
 .form-control.is-valid,
 .was-validated .form-control:valid {
-    border-color: #5fd0a5;
+    border-color: #8661C1;
     background-image: none;
 }
 
@@ -2429,14 +2429,14 @@ textarea.form-control {
 
 .custom-control-input.is-valid~.custom-control-label,
 .was-validated .custom-control-input:valid~.custom-control-label {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .custom-control-input.is-valid:checked~.custom-control-label::before,
 .was-validated .custom-control-input:valid:checked~.custom-control-label::before {
     color: #fff;
-    border-color: #5fd0a5;
-    background-color: #5fd0a5;
+    border-color: #8661C1;
+    background-color: #8661C1;
 }
 
 .custom-control-input.is-invalid~.custom-control-label,
@@ -2645,7 +2645,7 @@ textarea.form-control {
     height: 19px!important;
     border: 0!important;
     background: #DDF0F1!important;
-    color: #5fd0a5!important;
+    color: #8661C1!important;
     font-size: 12px!important;
     font-weight: 500!important;
     padding: 0 10px;
@@ -2672,11 +2672,11 @@ textarea.form-control {
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
     background: #DDF0F1;
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .select2-container--default .select2-results__option[aria-selected=true]:hover {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .select2-container--default .select2-results__group {
@@ -2787,7 +2787,7 @@ tr.group {
     width: 20px;
     height: 20px;
     font-style: normal;
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .jstree-default .jstree-anchor {
@@ -2945,7 +2945,7 @@ tr.group {
 
 .mailbox-menu li a.active {
     background: rgba(0,0,0,.01);
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .mailbox-menu li:last-child a {
@@ -3028,7 +3028,7 @@ tr.group {
 
 .mailbox-contacts li a:hover {
     box-shadow: 0 0 1.25rem rgba(31,45,61,.04);
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .inbox-options {
@@ -3253,7 +3253,7 @@ tr.group {
 
 .compose-options a:hover {
     background: rgba(0,0,0,.01);
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .compose-buttons {
@@ -3527,7 +3527,7 @@ tr.group {
 }
 
 .profile-header .profile-menu .profile-status i.active-now {
-    background: #5FD0A5;
+    background: #8661C1;
 }
 
 .profile-content {
@@ -3603,7 +3603,7 @@ tr.group {
 }
 
 .post-header .post-header-actions a:hover {
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .post-body {
@@ -3649,7 +3649,7 @@ tr.group {
 }
 
 .post-actions ul li a:hover {
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .post-actions ul li a.liked {
@@ -3755,7 +3755,7 @@ tr.group {
 
 .file-manager-menu ul li a.active,
 .file-manager-menu ul li a:hover {
-    color: #5FD0A5;
+    color: #8661C1;
     opacity: 1;
 }
 
@@ -3836,7 +3836,7 @@ tr.group {
 
 .file-options > a:hover {
     opacity: 1;
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .file-options > a::after {
@@ -4010,7 +4010,7 @@ tr.group {
     margin-top: 4px;
     border-radius: 30px;
     padding: 5px 15px;
-    color: #5fd0a5!important;
+    color: #8661C1!important;
     background: #cdf7e7;
     border: 0!important;
 }
@@ -4024,7 +4024,7 @@ tr.group {
 }
 
 .fc .fc-today {
-    color: #5FD0A5;
+    color: #8661C1;
     background: #FAFAFA;
 }
 
@@ -4068,7 +4068,7 @@ tr.group {
 
 .todo-menu li.active a {
     background: rgba(0,0,0,.01);
-    color: #5FD0A5;
+    color: #8661C1;
 }
 
 .todo-menu li:last-child a {
@@ -4254,7 +4254,7 @@ tr.group {
 }
 
 .top-products .product-item .product-item-status.product-item-success {
-    color: #5fd0a5;
+    color: #8661C1;
 }
 
 .top-products .product-item .product-item-status.product-item-danger {
