--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -2877,7 +2877,7 @@ tr.group {
 }
 
 .auth-page.sign-in .auth-image {
-    background: url('../images/login.svg') center center no-repeat;
+    background: url('../images/login_purple.svg') center center no-repeat;
     background-size: 90% 70%;
 }
 
