--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -1330,13 +1330,13 @@ h6 {
 .btn.btn-primary:focus,
 .btn.btn-primary.active,
 .btn.btn-primary:active {
-    box-shadow: 0 0 0 0.2rem rgba(77,189,146, 0.25);
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, 
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-    box-shadow: 0 0 0 0.2rem rgba(77,189,146, 0.5);
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .btn.btn-secondary {
@@ -1386,9 +1386,9 @@ h6 {
 .btn-success:not(:disabled):not(.disabled).active:focus,
 .show > .btn-success.dropdown-toggle:focus,
 .show > .btn-secsuccessondary.dropdown-toggle {
-    color: #5fd0a5;
+    color: #8661C1;
     background: #d1e9eb!important;
-    box-shadow: 0 0 0 0.2rem rgba(95, 208, 165, 0.25);
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .btn.btn-danger {
@@ -2417,8 +2417,8 @@ textarea.form-control {
 
 .form-control.is-valid:focus,
 .was-validated .form-control:valid:focus {
-    border-color: rgba(95, 208, 165, 0.6);
-    box-shadow: 0 0 0 0.2rem rgba(95, 208, 165, 0.25);
+    border-color: #8661C1;
+    box-shadow: 0 0 0 0.2rem #af8de6;
 }
 
 .form-control.is-invalid:focus,
